--- a/Blogparent/blogapp/templates/detail.html
+++ b/Blogparent/blogapp/templates/detail.html
@@ -106,49 +106,48 @@
                 {% endfor %}
 
         </div>
-        
-
-        
 
     </div>
 
     <div class="comment-section">
 
+        <div class="comments">
+
+            <div>
+                {% if not user.is_authenticated %}
+                <a href="{% url 'login' %}">로그인 후 댓글 달기</a>
+                {% endif %}
+    
+                {% if user.is_authenticated %}
+                <a href="{% url 'add_comment_to_post' blog.id %}">댓글달기</a>
+                {% endif %}
+            </div>
+
+            {% for comment in blog.comments.all %}
+                <div class="comment-object">
+                        <div class="comment-info">
+                            <div>{{ comment.author_name }}</div> 
+                            <div>{{ comment.created_at }}</div>
+                            <div> {% if request.user == comment.author_name %}
+                                <a href="{% url 'edit_comment' blog.id comment.id %}">EDIT</a>
+                                <a href="{% url 'delete_comment' blog.id comment.id %}">DELETE</a>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        <div class="comment-text">{{ comment.comment_text }}</div>
+                       
+                </div>
+                {% empty %}
+                <div>아직 댓글이 없습니다.</div>
+            {% endfor %}
+
+
+        </div>
+
     </div>
 
 
-    <div class="none">
     
-   
-
-   
-
-     
-
-
-    {% if not user.is_authenticated %}
-    <p><a href="{% url 'login' %}">로그인 후 댓글 달기</a></p>
-    {% endif %}
-    {% if user.is_authenticated %}
-    <a href="{% url 'add_comment_to_post' blog.id %}">댓글달기</a>
-    {% endif %}
-    <br>
-
-    {% for comment in blog.comments.all %}
-        <div class="comment">
-            <div>{{ comment.author_name }}</div>
-            <div>{{ comment.created_at }}</div>
-            <div>{{ comment.comment_text }}</div>
-        </div>
-        {% if request.user == comment.author_name %}
-        <ul>
-            <p><a href="{% url 'edit_comment' blog.id comment.id %}">댓글 수정</a></p>
-            <p><a href="{% url 'delete_comment' blog.id comment.id %}">댓글 삭제</a></p>
-        </ul>
-        {% endif %}
-    {% empty %}
-        <div>아직 댓글이 없습니다.</div>
-    {% endfor %}
-</div>
     {% endblock %}
     
