--- a/Blogparent/blogapp/static/css/component.css
+++ b/Blogparent/blogapp/static/css/component.css
@@ -35,7 +35,7 @@ body{
 }
 
 .logo i{
-  font-size: 50px;
+  font-size: 55px;
 }
 
 .logo p{
@@ -46,25 +46,31 @@ body{
 .menu-buttons{
   display: flex;
   flex-direction: column;
+  
 }
 .menu-buttons a{
-  color: black;
-  font-size: 10px;
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  margin-bottom: 20px;
 
-  margin-bottom: 15px;
+  padding:5px;
+}
+
+.menu-buttons a:hover{
+  background-color: rgb(219, 219, 219);
 }
 
 .social-buttons{
   display: grid;
   grid-template-columns: 1fr 1fr;
 
-
+  margin-top: 20px;
   height: 100px;
 }
 
 .social-buttons i{
   margin-top: 20px;
-  font-size: 15px;
+  font-size: 18px;
 
   justify-self: start;
 }
@@ -75,11 +81,11 @@ body{
 }
 
 .upper-header{
-  height: 30px;
+  height: 40px;
   display: flex;
   justify-content: flex-end;
 
-  font-size: 5px;
+  font-size: 15px;
 
   margin-right: 10px;
 }
@@ -87,15 +93,17 @@ body{
 .search-button{
   width: 65px;
   text-align: center;
-  line-height: 30px;
+  line-height: 40px;
 
   color:black;
+
+  margin-right: 10px;
 }
 
 .how-to-use{
-  width: 90px;
+  width: 110px;
   text-align: center;
-  line-height: 30px;
+  line-height: 40px;
   margin-right: 150px;
 
   background-color: #5C3471;
@@ -106,8 +114,9 @@ body{
 .write{
   width: 65px;
   text-align: center;
-  line-height: 30px;
+  line-height: 40px;
   background-color: #E7E5DD;
+  font-weight: bold;
 }
 
 /*info-section*/
@@ -223,4 +232,5 @@ footer{
   display: flex;
   justify-content: space-between;
   width: 20%;
+  color: black;
 }
