--- a/Blogparent/blogapp/templates/base.html
+++ b/Blogparent/blogapp/templates/base.html
@@ -8,6 +8,7 @@
      <!--css-->
      <link rel="stylesheet" href="{% static 'css/component.css'%}" type="text/css">
      <link rel="stylesheet" href="{% static 'css/detail.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/mypage.css'%}" type="text/css">
      <!--폰트어썸-->
      <script src="https://kit.fontawesome.com/1b24a1a7da.js" crossorigin="anonymous"></script> 
      <!-- 좋아요 관련 js -->
