--- a/Blogparent/blogapp/templates/mypage.html
+++ b/Blogparent/blogapp/templates/mypage.html
@@ -1,35 +1,73 @@
 {% extends 'base.html' %}
 {% load static%}
 
-<body>
     {% block content %}
-    <h1>마이페이지</h1>
+    <div class="section"> 
+        <h1>MY PAGE</h1>
 
-    <h2>내 정보</h2>
+    <div class="profile-title">
+        <h2>User Profile</h2>
+        <!-- <a href="{% url 'edit_user_info' %}">Edit Profile</a> -->
+    </div>
     
-    {% if user.is_authenticated %}
-    <p>아이디 : {{ user.username }}</p>
-    <p>닉네임 : {{ user.nickname }}</p>
-    <p>대학 : {{ user.university }}</p>
-    <p>위치 : {{ user.location }}</p>
+    <div class="profile-box-section">
+        <a  class="profile-box" href="{% url 'edit_user_info' %}"><p class="key">id</p> <p  class="value">{{ user.username }}</p></a>
+        <a  class="profile-box" href="{% url 'edit_user_info' %}"><p class="key">nickname</p> <p  class="value">{{ user.nickname }}</p></a>
+        <a  class="profile-box" href="{% url 'edit_user_info' %}"><p class="key">gender</p> <p  class="value">{{ user.university }}</p></a>
+        <a  class="profile-box" href="{% url 'edit_user_info' %}"><p class="key">location</p> <p  class="value">{{ user.location }}</p></a>
+    </div>
+    
 
-    {% endif %}
+  
    
 
-    <h3><a href="{% url 'edit_user_info' %}">내 정보 수정하기</a></h3>
+    <h2>My Post</h2>
+    
+    <div class="my-post-section">
+        
+        <div class="post-values">
+            <p>title</p>
+            <p>body</p>
+            <p>date</p>
+        </div> 
+        
+        {% for myblog in myblogs.all %}
+        <a class="my-post-object" href="/blog/{{ myblog.id }}">
 
-    <h2>내가 쓴 글</h2>
-    {% for myblog in myblogs.all %}
-    <p>제목 :<a href="/blog/{{ myblog.id }}">{{ myblog.title }}</a></p>
-    {% endfor %}
+            <p>{{ myblog.title }}</p>
+            <p>{{ myblog.summary }}</p>
+            <p>{{ myblog.pub_date }}</p>
+        
+        </a>
+        {% empty %}
+        <div>아직 글이 없습니다.</div>
+        {% endfor %}
+    </div>
+   
 
-    <h2>좋아요 누른 글</h2>
+    <h2>Liked Post</h2>
+    <div class="like-post-section">
+
+        <div class="like-post-values">
+            <p>title</p>
+            <p>body</p>
+            <p>date</p>
+        </div> 
 
         {% for liked_blog in liked_blogs.all %}
-            <p>제목 : {{ liked_blog.title }}</p>
+            <a class="like-post-object" href="/blog/{{ liked_blog.id }}">
+                <p>{{ liked_blog.title }}</p>
+                <p>{{ liked_blog.summary }}</p>
+                <p>{{ liked_blog.pub_date }}</p>
+            </a>
         {% empty %}
             <div>아직 좋아요 누른 글이 없습니다.</div>
         {% endfor %}
+    </div>
+       
     </a>
+
+    </div>
+   
     
     {% endblock %}
