--- a/Blogparent/blogapp/static/css/detail.css
+++ b/Blogparent/blogapp/static/css/detail.css
@@ -100,9 +100,6 @@
 
 }
 
-.youtube-title{
-    
-}
 
 .youtube-title-section a{
     text-align: center;
@@ -119,7 +116,7 @@
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(auto-fill,minmax(20%,auto));
+	grid-template-rows: repeat(auto, 1fr);
 
 }
 
@@ -149,10 +146,10 @@ iframe{
 }
 
 .comments{
-    border: solid rgb(255, 0, 0) 1px;
+
 
     width: 60%;
-    margin:0  auto 0 auto;
+    margin:50px  auto 100px auto;
 
 }
 
