--- a/Blogparent/blogapp/templates/home.html
+++ b/Blogparent/blogapp/templates/home.html
@@ -1,79 +1,6 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--css-->
-    <link rel="stylesheet" href="{% static 'css/component.css'%}" type="text/css">
-    <!--폰트어썸-->
-    <script src="https://kit.fontawesome.com/1b24a1a7da.js" crossorigin="anonymous"></script> 
-
-    <title>Home</title>
-</head>
-<body>
-  
-
-  <div class="side-header">
-
-    <a class="logo" href="{% url 'home' %}">
-      <i class="fas fa-globe"></i>
-      <p>ARCHIVE MD</p>
-    </a>
-
-    <div class="menu-buttons">
-    <a href="{% url 'home' %}"> Home</a>
-
-      {% if not user.is_authenticated %}
-      <a href ="{% url 'login' %}">Login</a>
-      {% endif %}
-      
-      {% if user.is_authenticated %}
-      <a href ="{% url 'logout' %}">Logout</a>
-      {% endif %}
-
-      {% if not user.is_authenticated %}
-      <a href ="{% url 'register' %}">Signup</a>
-      {% endif %}
-
-      {% if user.is_authenticated %}
-      <a href="{% url 'mypage' %}">Mypage</a>
-      {% endif %}
-
-      <a href="{% url 'mypage' %}">About</a>
-      <a href="{% url 'mypage' %}">Awards</a>
-      <a href="{% url 'mypage' %}">Notice</a>
-
-      <a href="{% url 'mypage' %}">Create</a>
-
-      <a class="side-search-button" href="{% url 'video_list' %}">Search</a>
-    </div>
-
-    <div class="social-buttons">
-      <i class="fab fa-twitter"></i>
-      <i class="fab fa-facebook"></i>
-      <i class="fab fa-google"></i>
-      <i class="fab fa-github"></i>
-      <i class="fab fa-instagram"></i>
-    </div>
-  </div> <!--사이드헤더 끝-->
-    
-  <div class="container">
-
-    <div class="upper-header">
-
-      <a class="search-button" href="{% url 'video_list' %}">Search<i class="fas fa-search" style="margin-left:5px;"></i></a>
-
-      <a class="how-to-use">
-        How to use
-      </a>
-
-      <a class="write" href ="{% url 'new' %}">Create</a>
-      
-    </div> 
-
-     <!--info-section-->
+{% block content %}
     <div class="info-section">
 
       <div class="info-1">
@@ -147,31 +74,4 @@
 
     </div>
 
-
-    <footer>
-      <div class="footer-content-top">MORE INFO ABOUT MY PAGE</div>
-
-      <div class="footer-content-bottom">
-        <div>ARCHIVE MD © 2021</div>
-
-        <div class="footer-icons"> 
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-google"></i>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-instagram"></i>
-        </div>
-
-        <div>BE INSPIRED. BE INSPIRING.</div>
-    </div>
-    </footer>
-      
-
-
-
-</div>
-   
-    
-    
-</body>
-</html>
+{% endblock %}
