--- a/Blogparent/account/templates/edit_user_info.html
+++ b/Blogparent/account/templates/edit_user_info.html
@@ -2,12 +2,17 @@
 {% load static%}
 
 {% block content %}
+<div class="edit-user-section">
 
-    <h1>유저 정보 수정</h1>
+    <h1>Edit Your Information</h1>
 
-   <form action="{% url 'edit_user_info' %}" method="POST">
-       {% csrf_token%}
-       {{ form.as_p}}
-       <button type="submit">제출</button>
-   </form>
+    <form action="{% url 'edit_user_info' %}" method="POST">
+        {% csrf_token%}
+        {{ form.as_p}}
+        <button type="submit">Submit</button>
+    </form>
+
+
+</div>
+    
 {% endblock%}
