--- a/Blogparent/account/templates/signup.html
+++ b/Blogparent/account/templates/signup.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 {% load static%}
 {% block content %}
-<h1>Signup</h1>
+
+<div class="signup-section">  
+   <h1>Signup</h1>
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         {{ form.as_p}}
-        <button type="submit">제출</button>
+        <button type="submit">Submit</button>
     </form>
     
-
+</div>
 {% endblock%}
 
     
