--- a/Blogparent/blogapp/static/css/component.css
+++ b/Blogparent/blogapp/static/css/component.css
@@ -51,7 +51,7 @@ body{
 .menu-buttons a{
   color: rgb(0, 0, 0);
   font-size: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 
   padding:5px;
 }
@@ -75,7 +75,7 @@ body{
   justify-self: start;
 }
 
-/*본문*/
+/*헤더*/
 .container{
   margin-left: 8%;
 }
@@ -108,7 +108,6 @@ body{
 
   background-color: #5C3471;
   color:white;
-  font-weight:bold;
 }
 
 .write{
@@ -116,93 +115,9 @@ body{
   text-align: center;
   line-height: 40px;
   background-color: #E7E5DD;
-  font-weight: bold;
-}
-
-/*info-section*/
-
-.info-section{
-  background-color: #F1EFE9;
-  display: flex;
-  
-  width: 100%;
-
-  margin-top: 25px;
-  padding: 20px;
   
 }
 
-.info-1{
-  width: 70%;
-  height: 500px;
-  
-}
-
-
-.info-2{
-  width: 70%;
-  height: 500px;
-  
-  padding :10px;
-
-}
-
-.infos{
-  margin:0;
-  padding: 0;
- 
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  
-  grid-gap: 6px;
-}
-
-.infos a{
-  border-bottom: 1px solid black;
-}
-
-.hot-posts{
-  padding-left: 20px;
-  margin: 0;
-}
-
-/*인기글 3개*/
-.popular-section{
-  display: flex;
-  justify-content: space-between;
-
-  width: 100%;
-  height: 280px;
-  padding :10px 20px 0 20px;
-}
-
-/*하얀띠*/
-.insert-box{
-  background-color: white;
-  height: 100px;
-  width: 100%;
-}
-
-/*일반 게시글 나열*/
-.post-section{
-  display: grid;
-  
-  grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(auto-fill,minmax(20%,auto));
-  
-  width: 100%;
-  height: 1000px;
-
-  padding: 40px 20px 0 20px;
-
-  height: auto;
-}
-
-.posts{
-  height: auto;
-  padding-bottom: 40px;
-}
 
 /*푸터*/
 footer{
