--- a/Blogparent/blogapp/templates/base.html
+++ b/Blogparent/blogapp/templates/base.html
@@ -10,18 +10,32 @@
      <link rel="stylesheet" href="{% static 'css/detail.css'%}" type="text/css">
      <link rel="stylesheet" href="{% static 'css/mypage.css'%}" type="text/css">
      <link rel="stylesheet" href="{% static 'css/modal.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/home.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/notice_board.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/search.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/edit_user_info.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/login.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/signup.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/new.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/edit.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/edit_youtube.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/create_youtube.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/add_comment.css'%}" type="text/css">
+     <link rel="stylesheet" href="{% static 'css/edit_comment.css'%}" type="text/css">
+
+
+
      <!--폰트어썸-->
      <script src="https://kit.fontawesome.com/1b24a1a7da.js" crossorigin="anonymous"></script> 
      <!--모달js-->
      <script src ="/static/js/modal.js" defer></script>
-     
      <!-- 좋아요 관련 js -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
      <title>Document</title>
 </head>
 <body>
   
-  <div id="modal" class="modal-overlay">
+  <div id="modal" class="modal-overlay" style="display: none;">
       <div class="modal-window">
           <div class="title">
               <h2>How to Use?</h2>
@@ -61,11 +75,11 @@
           <a href="{% url 'mypage' %}">Mypage</a>
           {% endif %}
     
-          <a href="{% url 'mypage' %}">About</a>
-          <a href="{% url 'mypage' %}">Awards</a>
-          <a href="{% url 'mypage' %}">Notice</a>
+          <a href="{% url 'notice_board' 1 %}">About</a>
+          
+          <a href="{% url 'notice_board' 1 %}">Notice</a>
     
-          <a href="{% url 'mypage' %}">Create</a>
+          <a href="{% url 'new' %}">Create</a>
     
           <a class="side-search-button" href="{% url 'video_list' %}">Search</a>
         </div>
