--- a/Blogparent/blogapp/templates/edit.html
+++ b/Blogparent/blogapp/templates/edit.html
@@ -2,13 +2,17 @@
 {% load static%}
 
 {% block content %}
+
+<div class="edit-section">
+    <h1>Edit Your List</h1>
     <form action="{% url 'update' blog.id %}" method="POST" enctype="multipart/form-data">
 
         {% csrf_token %}
-        <p>제목: <input type="text" name="title" value="{{ blog.title}}"></p>
-        본문: <textarea name="body" id="" cols="30" rows="10">{{ blog.body}}</textarea>
+        <p>Title : <input type="text" name="title" value="{{ blog.title}}"></p>
+        Text: <textarea name="body" id="" cols="30" rows="10">{{ blog.body}}</textarea>
         
 
-        <button type="submit">제출</button>
+        <button type="submit">submit</button>
     </form>
+</div>
 {% endblock %}
