--- a/Blogparent/blogapp/templates/notice_board.html
+++ b/Blogparent/blogapp/templates/notice_board.html
@@ -3,9 +3,14 @@
 
     
     {% block content %}
-
-    제목 {{notice.notice_title}}
-    본문 {{notice.notice_body}}
-    날짜 {{notice.notice_pub_date}}
+    
+    <div class="notice-section">
+        <h2>{{notice.notice_title}}</h2>
+        <p>{{notice.notice_pub_date}}</p>
+        <P class="notice-text">{{notice.notice_body}}</P>
+    </div>
+    
+    
+    
     {% endblock %}
     
