@login_required 추가 / 모달창 css 수정

--- a/Blogparent/blogapp/templates/base.html
+++ b/Blogparent/blogapp/templates/base.html
@@ -22,9 +22,6 @@
      <link rel="stylesheet" href="{% static 'css/create_youtube.css'%}" type="text/css">
      <link rel="stylesheet" href="{% static 'css/add_comment.css'%}" type="text/css">
      <link rel="stylesheet" href="{% static 'css/edit_comment.css'%}" type="text/css">
-
-
-
      <!--폰트어썸-->
      <script src="https://kit.fontawesome.com/1b24a1a7da.js" crossorigin="anonymous"></script> 
      <!--모달js-->
@@ -42,9 +39,17 @@
           </div>
           <div class="close-area">X</div>
           <div class="content">
-              <p>가나다라마바사 아자차카타파하</p>
-             
-              
+              <p>Hello, welcome to our service. Is this your first time on our website? I'll tell you how to use the site.</p>
+              <p>Please sign up first. It takes very little time, so don't worry.
+              </p>
+              <p>There is a popular video collection post on the home screen. It will be of great help to you.
+              </p>
+              <p>If you have a video you want to find, you can search by pressing the "Search" button.
+              </p>
+              <p>Press "Create" to create your own collection of videos and share them with many people.
+              </p>
+              <p>I like your writing on My Page. Check out the text you pressed.
+              </p>
           </div>
       </div>
   </div>
