--- a/Blogparent/blogapp/static/css/modal.css
+++ b/Blogparent/blogapp/static/css/modal.css
@@ -2,29 +2,25 @@
             width: 100%;
             height: 100%;
             position: absolute;
+            
             left: 0;
-            top: 0;
+            top: 100px;
             display: none;
             flex-direction: column;
             align-items: center;
             justify-content: center;
 
-            background: rgba(255, 255, 255, 0.25);
-            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-            backdrop-filter: blur(1.5px);
-            -webkit-backdrop-filter: blur(1.5px);
-            border-radius: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.18);
+           
         }
 
         #modal .modal-window {
 
-            background: rgba( 69, 139, 197, 0.70 );
+            background: rgba(92,52,113,0.7);
             box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
             backdrop-filter: blur( 13.5px );
             -webkit-backdrop-filter: blur( 13.5px );
             border-radius: 10px;
-            border: 1px solid rgba( 255, 255, 255, 0.18 );
+            
 
             width: 400px;
             height: 500px;
