--- a/Blogparent/blogapp/templates/base.html
+++ b/Blogparent/blogapp/templates/base.html
@@ -28,7 +28,10 @@
      <script src ="/static/js/modal.js" defer></script>
      <!-- 좋아요 관련 js -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-     <title>Document</title>
+    <!--슬라이더-->
+    <link rel="stylesheet" href="{% static 'css/slide.css'%}" type="text/css">
+    <script src ="/static/js/slide.js" defer></script>
+    <title>Document</title>
 </head>
 <body>
   
@@ -58,7 +61,9 @@
 
         <a class="logo" href="{% url 'home' %}">
           <i class="fas fa-globe"></i>
-          <p>ARCHIVE MD</p>
+          <div style="margin-right: 25px;"><p style="text-align: center;">DMD</p>
+          <p style="text-align: center;">STUDIO</p></div>
+          
         </a>
     
         <div class="menu-buttons">
