--- a/Blogparent/blogapp/templates/home.html
+++ b/Blogparent/blogapp/templates/home.html
@@ -4,7 +4,62 @@
     <div class="info-section">
 
       <div class="info-1">
-        <img src="{% static 'img/baseimg.jpg'%}" width="720" height="420" alt="사진">
+        <div>
+          <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+              <div class="numbertext">1 / 6</div>
+              <img src="{% static 'img/baseimg.jpg'%}" style="width: 720px; height: 420px;">              
+              <div class="text">DMD STUDIO</div>
+            </div>
+      
+            <div class="mySlides fade">
+              <div class="numbertext">2 / 6</div>
+              <img src="{% static 'img/baseimg.jpg'%}" style="width: 720px; height: 420px;">              
+              <div class="text">DMD STUDIO</div>
+            </div>
+      
+            <div class="mySlides fade">
+              <div class="numbertext">3 / 6</div>
+              <img src="{% static 'img/baseimg.jpg'%}" style="width: 720px; height: 420px;">              
+              <div class="text">DMD STUDIO</div>
+            </div>
+      
+            <div class="mySlides fade">
+              <div class="numbertext">4 / 6</div>
+              <img src="{% static 'img/baseimg.jpg'%}" style="width: 720px; height: 420px;">              
+              <div class="text">DMD STUDIO</div>
+            </div>
+      
+            <div class="mySlides fade">
+              <div class="numbertext">5 / 6</div>
+              <img src="{% static 'img/baseimg.jpg'%}" style="width: 720px; height: 420px;">              
+              <div class="text">DMD STUDIO</div>
+            </div>
+      
+            <div class="mySlides fade">
+              <div class="numbertext">6 / 6</div>
+              <img src="{% static 'img/baseimg.jpg'%}" style="width: 720px; height: 420px;">              
+              <div class="text">DMD STUDIO</div>
+            </div>
+      
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="moveSlides(-1)">&#10094;</a>
+            <a class="next" onclick="moveSlides(1)">&#10095;</a>
+          </div>
+            
+          <!-- The dots/circles -->
+          <div style="text-align:center" class="dot-sction">
+            <span class="dot" onclick="currentSlide(0)"></span>
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+          </div>
+        </div>
+
         <div class="infos">
           {%for notice in notices %}
           <a href="{% url 'notice_board' notice.id %}">{{notice.notice_title}}{{notice.notice_pub_date}}</a>
