--- a/Blogparent/blogapp/static/css/component.css
+++ b/Blogparent/blogapp/static/css/component.css
@@ -1,11 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 * {
   text-decoration: none;
   box-sizing:border-box; /*이거 해야 좌우 비율 맞아*/
+
+  font-family: 'Open Sans', sans-serif;
 }
 
 body{
   background-color: #F1EFE9;
   margin:0;
+ 
+  
+  line-height: 150%;
 }
 
 /*사이드*/
@@ -41,11 +49,13 @@ body{
 .logo p{
   margin-top: 5px;
   font-size: 15px;
+  font-weight: 600;
 }
 
 .menu-buttons{
   display: flex;
   flex-direction: column;
+  margin-top: 30px;
   
 }
 .menu-buttons a{
@@ -91,7 +101,7 @@ body{
 }
 
 .search-button{
-  width: 65px;
+  width: 90px;
   text-align: center;
   line-height: 40px;
 
@@ -105,6 +115,7 @@ body{
   text-align: center;
   line-height: 40px;
   margin-right: 150px;
+  font-weight: 400;
 
   background-color: #5C3471;
   color:white;
