--- a/Blogparent/blogapp/static/css/detail.css
+++ b/Blogparent/blogapp/static/css/detail.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+
 .none{
     display: none;
+}
+
+#bold{
+    font-weight:600;
 }
 
 .big-post-section{
@@ -19,6 +27,7 @@
 
     margin: 50px auto 50px auto;
 }
+
 
 .big-post-info{
     height: 30px;
@@ -173,14 +182,36 @@ iframe{
 
 }
 
-.comment-info{
-   
-}
 
 .comment-text{
     border: solid rgb(187, 186, 180) 1px;
     border-radius: 2px;
-    padding:3px;
+    padding:8px;
     margin-left: 5px;
     width: 100%;
+}
+
+/*버튼*/
+
+
+.comment-button{
+    background-color: #5C3471;
+    color: white;
+
+    border-style: none;
+    border-radius: 13px;
+
+    padding: 3px 10px 3px 10px;
+
+    font-size: large;
+
+    margin-top: 30px;
+    width: 120px;
+
+    cursor: pointer;
+}
+
+
+.login-section form button:hover{
+    box-shadow: 0px 0px 3px 2px rgba(115, 66, 141, 0.78);
 }
