--- a/Blogparent/blogapp/templates/notice_board.html
+++ b/Blogparent/blogapp/templates/notice_board.html
@@ -6,8 +6,8 @@
     
     <div class="notice-section">
         <h2>{{notice.notice_title}}</h2>
-        <p>{{notice.notice_pub_date}}</p>
-        <P class="notice-text">{{notice.notice_body}}</P>
+        <p style="margin-top: 20px; color: gray;">{{notice.notice_pub_date}}</p>
+        <P class="notice-text" style="color: rgb(56, 56, 56); line-height: 150%;">{{notice.notice_body}}</P>
     </div>
     
     
